fix: update ShowDetailView and ShowPlanningAiService to improve wrestler filtering logic and set initial values correctly